<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeviceManager</string>
    <string name="title_section1">My Devices</string>
    <string name="title_section2">Recent </string>
    <string name="title_section3">More</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_new_device">New Device</string>
    <string name="action_quit">Quit</string>
    <string name="action_devices_btn">Devices</string>
    <string name="action_files_btn">Files</string>
    <string name="action_btn3">Button 3</string>
    <string name="action_btn4">Button 4</string>
    <string name="dialog_id_hint">ID</string>
   	<string name="dialog_name_hint">Name</string>
   	<string name="dialog_owner_hint">Owner</string>
   	<string name="dialog_ip_hint">IP</string> 
   	<string name="dialog_add_new">Add</string> 
   	<string name="dialog_rename_file">Ok</string> 
   	<string name="dialog_cancel">Cancel</string>
   	<string name="action_bar_title">Devices</string>
   	<string name="gen_send">Send</string>
   	<string name="gen_browse">Browse</string>
   	<string name="gen_info">Info</string>
   	<string name="get_file_path">Path</string>
   	<string name="gen_disconect">Disconect</string>
   	<string name="gen_remove">Remove</string>
   	<string name="gen_file_copy">Copy</string>
   	<string name="gen_file_send">Send</string>
   	<string name="gen_file_move">Move</string>
   	<string name="gen_file_paste">Paste</string>
   	<string name="gen_file_delete">Delete</string>
   	<string name="gen_file_rename">Rename</string>
   	<string name="cont_description_image">Image</string>
    <string-array name="item_options_array">
        <item >Send</item>
        <item >Browse</item>
        <item >Info</item>
        <item >Disconect</item>
        <item >Remove</item>
    </string-array>

</resources>