<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/dialog_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/dialog_id_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/dialog_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/dialog_name_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/dialog_edit_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/dialog_owner_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/dialog_edit_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/dialog_ip_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/dialog_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_add_new" />

</LinearLayout>