<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/home_page_first_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/home_page_devices_btn"
            style="@style/LightThemeSelector"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/action_devices_btn"
            android:textSize="16sp" />

        <Button
            android:id="@+id/home_page_files_btn"
            style="@style/LightThemeSelector"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/action_files_btn"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_page_second_row"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/home_page_btn3"
            style="@style/LightThemeSelector"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/action_btn3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/home_page_btn4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/action_btn4"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>